<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_20">

    <androidx.legacy.widget.Space
        app:layout_constraintBottom_toTopOf="@id/title"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/language_menu_title"
        android:textStyle="bold"
        android:padding="4dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/subtitle" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/language_menu_sub_title"
        app:layout_constraintBottom_toTopOf="@id/divider1" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_20"
        app:layout_constraintBottom_toTopOf="@id/eng_lang" />

    <TextView
        android:id="@+id/eng_lang"
        style="@style/PageMiddleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/gen_eng"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_20"
        app:layout_constraintBottom_toTopOf="@id/rus_lang" />

    <TextView
        android:id="@+id/rus_lang"
        style="@style/PageMiddleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/gen_rus"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/cancel_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        style="@style/PageMiddleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/gen_cancel"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>