<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray_22"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/title"
            style="@style/PageTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="38dp"
            android:text="@string/settings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/guide_language"
            style="@style/PageMiddleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_20"
            android:drawableStart="@drawable/ic_language"
            android:drawablePadding="8dp"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/guides_language"
            app:layout_constraintTop_toBottomOf="@id/space1" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/guid_language_code"
            style="@style/PageSmallTextStyle"
            android:text="Русский"
            app:layout_constraintTop_toBottomOf="@id/space1"
            app:layout_constraintBottom_toTopOf="@id/space2"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_language" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/touch_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/stay_in_touch"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space2" />

        <View
            android:id="@+id/space3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/touch_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rate"
            style="@style/PageMiddleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_20"
            android:drawableStart="@drawable/ic_rate"
            android:drawablePadding="8dp"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            android:padding="8dp"
            android:text="@string/gen_rate_app"
            app:layout_constraintTop_toBottomOf="@id/space3" />

        <View
            android:id="@+id/space4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/follow_us_fb"
            style="@style/PageMiddleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_20"
            android:drawableStart="@drawable/ic_follow_fb"
            android:drawablePadding="8dp"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/gen_follow_us"
            app:layout_constraintTop_toBottomOf="@id/space4" />

        <View
            android:id="@+id/space5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/follow_us_fb" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tell_a_friend"
            style="@style/PageMiddleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_20"
            android:drawableStart="@drawable/ic_share"
            android:drawablePadding="8dp"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/tell_a_friend"
            app:layout_constraintTop_toBottomOf="@id/space5" />

        <View
            android:id="@+id/space6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tell_a_friend" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/gen_support"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space6" />


        <View
            android:id="@+id/space7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/support" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/terms"
            style="@style/PageMiddleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_20"
            android:drawableStart="@drawable/ic_privacy"
            android:drawablePadding="8dp"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            android:padding="8dp"
            android:text="@string/terms_privacy"
            app:layout_constraintTop_toBottomOf="@id/space7" />

        <View
            android:id="@+id/space8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contact_us"
            style="@style/PageMiddleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_20"
            android:drawableStart="@drawable/ic_contact_us"
            android:drawablePadding="8dp"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="8dp"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            android:text="@string/contact_us"
            app:layout_constraintTop_toBottomOf="@id/space8" />

        <View
            android:id="@+id/space9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_us" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/gen_purchase"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space9" />

        <View
            android:id="@+id/space10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purchase" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/restore"
            style="@style/PageMiddleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_20"
            android:drawableStart="@drawable/ic_restore"
            android:drawablePadding="8dp"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/gen_restore"
            app:layout_constraintTop_toBottomOf="@id/space10" />

        <View
            android:id="@+id/space11"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restore" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/get_all_access"
            style="@style/PageMiddleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_20"
            android:drawableStart="@drawable/ic_get_all"
            android:drawablePadding="8dp"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/gen_access"
            app:layout_constraintTop_toBottomOf="@id/space11" />

        <View
            android:id="@+id/space12"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="#DCDDDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_all_access" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
