<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <TextView
        android:id="@+id/title"
        style="@style/PageTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/explore"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/audio_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ribbon"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="16dp"
        android:background="@drawable/ribbon_green_gradient"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bg_separator_view"
            android:layout_width="84dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_ribbon_bg_separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/yellow_part"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/gen_save"
            android:textColor="@color/blue_ribbon"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="@id/bg_separator_view"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/yellow_part"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:background="@drawable/ribbon_yellow_gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="30%"
            android:textColor="@color/blue_ribbon"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/yellow_part" />

        <TextView
            android:id="@+id/ribbon_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/gen_access"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/save_text"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>